tests/lean/vm_override.lean.expected.out
@[vm_override]
meta def hello : name :=
id_rhs name (name.mk_string "name" (name.mk_string "hello" name.anonymous))
hello_override.name
hello.name
hello_2.name
hello_override.name
vm_override.lean:42:0: error: unknown declaration 'native.float.mk'
vm_override.lean:47:5: warning: declaration 'native.float₁.mk' uses sorry
vm_override.lean:56:0: error: type mismatch with override:

float₁.rec : Π {C : native.float → Sort l}, (Π (a : ℕ), C (native.float₁.mk a)) → Π (n : native.float), C n
native.float₁.rec : ℕ
vm_override.lean:64:5: warning: declaration 'native.float.rec' uses sorry
vm_override.lean:66:5: warning: declaration 'native.float.cases_on' uses sorry
bit0 (has_one.one float) : float
0.5
1.47059e+06
